<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.registrationscreen.RegistrationScreenFragment">


    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/name"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/yourusername"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/yourpassword"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUserName"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/your_phone_number"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
        app:layout_constraintVertical_bias="0.1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:textColor="#2D67FF"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_login_background"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/liner"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>