<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E5ECFF"
    android:layout_height="match_parent"
    tools:context=".fragments.addingchildscreen.AddingChildFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/adding"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/child"
            android:textColor="@color/blue"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/childNameEditText"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/child_name"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />
    <EditText
        android:id="@+id/childUserAgeEditText"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edittext_background"
        android:hint="@string/child_username"
        android:paddingStart="@dimen/_10sdp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/childNameEditText"
        app:layout_constraintVertical_bias="0.1" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_login_background"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/childUserAgeEditText"
        app:layout_constraintTop_toBottomOf="@id/childUserAgeEditText"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>